# diffusers-burn

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE_APACHE  README.md  build.rs
.github/workflows/: validate.yml
.zed/: tasks.json
src/: lib.rs  main.rs  utils.rs
src/cli/: convert.rs  mod.rs  sample.rs  txt2img.rs
src/models/: attention.rs  embeddings.rs  groupnorm.rs  mod.rs  resnet.rs  unet_2d_blocks.rs
src/pipelines/: mod.rs  stable_diffusion.rs
src/schedulers/: ddim.rs  mod.rs
src/transformers/: clip.rs
src/utils/: mod.rs  upsample.rs
