[package]
name = "diffusers-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["burn/default", "std"]

std = ["burn/std"]

ndarray = ["burn/ndarray"]
ndarray-no-std = ["burn/ndarray-no-std"]
ndarray-blas-accelerate = ["burn/ndarray-blas-accelerate"]

torch = ["burn/tch"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.11.0", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
serde = { version = "1.0.192", default-features = false, features = ["derive", "alloc"] }

[patch.crates-io]
burn = { git = "https://github.com/Tracel-AI/burn", rev = "1f18cf4adff9682052c4919b8986968cabe85da4" }
