[package]
name = "diffusers-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["burn/default", "std"]
std = ["burn/std"]

# Backend
accelerate = ["burn/accelerate"]
cuda = ["burn/cuda"]

ndarray = ["burn/ndarray"]
torch = ["burn/tch"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.12.1", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
serde = { version = "1.0.192", default-features = false, features = [
    "derive",
    "alloc",
] }
