[package]
name = "diffusers-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["burn/default", "std"]
std = ["burn/std"]

# Backend
accelerate = ["burn/accelerate"]
cuda = ["burn/cuda"]

ndarray = ["burn/ndarray"]
torch = ["burn/tch"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.0", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
serde = { version = "1.0.197", default-features = false, features = [
    "derive",
    "alloc",
] }

[patch.crates-io]
#burn = { git = "https://github.com/tracel-ai/burn" }
